--- a/index.html
+++ b/index.html
@@ -31,17 +31,6 @@
                     <a href="index.html">Code Blogs</a>
                 </div>
             </div>
-            <!--
-            <div class="collapse navbar-collapse" id="primary-menu">
-                <ul class="nav navbar-nav">
-                    <li><a href="our-story.html">Our Story</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="signup.html">Signup</a></li>
-                    <li><a href="faqs.html">FAQs</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            -->
         </div>
     </nav>
 
@@ -107,7 +96,7 @@
 
 
         <div class="container">
-            <h2><strong>Google Pie Charts - Top Programming Languages</strong></h2>
+            <h2><strong>Google Pie Charts - Top Three Programming Languages</strong></h2>
             <html>
 
             <head>
