--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15551.422900652617!2d77.694351!3d12.9810782!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3d236f4d15d8351e!2sEdureka!5e0!3m2!1sen!2sin!4v1560725423987!5m2!1sen!2sin"
                 width="1000" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </br>
-            <h3>You can learn these JavaScript, Python and Java at <a href="https://www.edureka.co">Edureka</a></h3>
+            <h3>You can learn JavaScript, Python and Java at <a href="https://www.edureka.co">Edureka</a></h3>
         </div>
 
     </div>
